theme/2014/static/scss/base.scss
$darkblue: rgba(29, 79, 114, 1);
$darkgray: rgba(102, 102, 102, 1);
$fluid-black: rgba(39, 39, 39, 1);
$fluid-dark-red: rgba(203, 50, 51, 1);
$fluid-gray: rgba(176, 176, 176, 1);
$fluid-light-gray: rgba(241, 241, 241, 1);
$fluid-red: rgba(255, 52, 53, 1);
$lightblue: rgba(0, 133, 161, 1);
$lightgray: rgba(211, 211, 211, 1);
$lightergray: rgba(238, 238, 238, 1);
$shadowgray: rgba(170, 170, 170, 1);
$textblack: rgba(48, 48, 48, 1);
$tooltipblack: rgba(68, 68, 68, 1);
$white: rgba(255, 255, 255, 1);
$transparent: rgba(0, 0, 0, 0);
$black: rgba(0, 0, 0, 1);
$blue: rgba(83, 150, 234, 1);
$blue2: rgba(25, 116, 186, 1);
$middleblack: rgba(85, 85, 85, 1);
$greenyellow: rgba(173, 255, 47, 1);
$button-hover: rgba(255, 52, 53, 1);
$button-red: rgba(191, 38, 38, 1);
//Monokai theme colors
$codeblack: rgba(39, 40, 43, 1);
$codebrown: rgba(117, 113, 94, 1);
$codedarkred: rgba(30, 0, 16, 1);
$codegray: rgba(242, 242, 242, 1);
$codegreen: rgba(166, 226, 46, 1);
$codelightblue: rgba(102, 217, 239, 1);
$codelightred: rgba(249, 38, 114, 1);
$codepink: rgba(150, 0, 80, 1);
$codepurple: rgba(174, 129, 255, 1);
$codeyellow: rgba(230, 219, 116, 1);

// Tachyons custom classes:

.bg-fluid-red { background-color: $fluid-red;}
.bg-fluid-gray { background-color: $fluid-gray;}
.bg-fluid-lightgray { background-color: $lightergray; }
.bg-fluid-black { background-color: $fluid-black; }
.bg-tooltip { background-color: $tooltipblack; }
.bg-code-bk { background-color: $codeblack; }
.bg-code-dkred { background-color: $codedarkred; }
.bc-fluid-gray { border-color: $fluid-gray; }
.bc-fluid-red { border-color: $button-hover; }
.bg-dk-red { background-color: $button-red;}
.minw-100 { min-width: 100%; }
.ma-auto { margin: auto; }
.w-32 { width: 32%; }
.montsy { font-family: 'Montserrat'; }
.sans-pro { font-family: 'Source Sans Pro'; }
.roboto { font-family: 'Roboto', sans-serif; }
.neue { font-family: neue-haas-grotesk-display, sans-serif; }
.mono { font-family: 'Overpass Mono', monospace; }
.mono2 { font-family: monospaced; }
.c-black { color: $black; }
.c-fluid-bk { color: $fluid-black; }
.c-fluid-red { color: $fluid-red; }
.c-fluid-dkred { color: $fluid-dark-red; }
.c-dkred { color: $button-red; }
.c-fluid-gray { color: $fluid-gray; }
.c-fluid-dkblue { color: $darkblue; }
.c-codegray { color: $codegray; }
.c-codebrown { color: $codebrown; }
.c-codegreen { color: $codegreen; }
.c-codelightblue { color: $codelightblue; }
.c-codepurple { color: $codepurple; }
.c-codepink { color: $codepink; }
.c-codelightred { color: $codelightred; }
.c-codeyellow { color: $codeyellow; }
.c-dkgrey { color: $darkgray; }
.grayscale { filter: grayscale(100);}
.hv-fluid-dkred { &:hover { color: $fluid-dark-red;} }
.hv-fluid-bk { &:hover { color: $fluid-black;} }
.hv-fluid-lb { &:hover { color: $lightblue; }}
.hv-bt-fluid-rd { &:hover { background-color: $button-hover; } }
.hv-fluid-rd { &:hover { color: $button-hover; } }
.hideme { visibility: hidden; }
.fluid-bullet { list-style-image: url('../../images/bullet2.png');}
.bullet-inside { list-style-position: inside; }
.h-banner { height: 15em; }
.w-banner { width: 20em; }
.minh-nav { min-height: 5em; }
.h-search { height: 2.5em; }
.w6 { width: 19em; }
.w-maxcontent { width: max-content; }
.mt8 { margin-top: 20rem; }
.bannerbt { background-color: $button-red; }
.bt-pd { padding: .625rem 2.5rem; }
.contact-pd { padding: .75rem 5rem; }
.bt-trans { transition: all .3s ease;}
.menu-txt-trans { transition: color .2s; }
.ptdemo { padding-top: 6rem; }
.rep-bd { border: .063rem solid $fluid-light-gray; }
.rep-shadow { box-shadow: -.188rem -.125rem .3rem $fluid-light-gray; }
.wr-bdr { border-bottom-right-radius: .938rem; }
.wr-bdl { border-top-left-radius: .938rem; }
.wr-sz { height: 5.625rem; width: 5.625rem; }
.accordion-item h4:not(:active) ~ .accordion-content { display: none; }
.ch-w { max-width: 95ch; }
.anchor-pos { top: -50vh; }
.bl-hidden { border-left-style: hidden; }
.ba-hidden { border-style: hidden; }
.tooltip { &:hover { .tooltip-text { visibility: visible; } } }
.anchor-sign { &::before { content: '\0023'; } }
.banner-bg { background-image: url('../../images/cover-main.png'); }
.banner-title { background-image: url('../../images/pentest.svg'); }
.b-max { font-weight: 999; }
.nb-6 { margin-bottom: -6rem;}
.lower-img { &:hover { transform: scaleY(1.2);
    transition: transform .25s ease-in-out; } }
.pointer {cursor: pointer; }
.z-100 { z-index: 100; }
.menu-txt { &:hover {color: $fluid-black; }
  &:focus { color: $fluid-black; } }
.menu-trans { transform: translateY(-25%) rotateX(35deg);
  transition: transform .5s, opacity .5s; }
.t-50 { top: 50%; }
.ty-50 { transform: translateY(-50%); }
.mt-menu { margin-top: 1.25rem; }
.f-small { font-size: .8rem; }
.w2-5 { width: 2.25rem; }
.f-footer { font-size: 1.65rem; }
.lh-2 { line-height: 2; }

// Tachyons custom responsive classes

// Small screens
@media screen and (max-width: 30em) {
  .mr-5-s { margin-right: 4rem; }
  .f-small-s { font-size: .6rem; }
  .f4-s { font-size: 1.25rem; }
}
//medium resolutions
@media screen and (min-width: 30em) and (max-width: 60em) {
  .two-columns-m { column-count: 2; }
  .mr-5-m { margin-right: 4rem; }
  .f-title-m { font-size: 2rem; }
}

//Large screens
@media screen and (min-width: 60em) {
  .h-28em-l { height: 28em; }
  .h-banner-l { height: 20em; }
  .three-columns-l { column-count: 3; }
  .hover-white-l { &:hover { color: $white; }}
  .new-banner { width: 40em; }
  .mr-13-l { margin-right: 13rem; }
  .f-title-l { font-size: 2rem; }
}

//Very large screens
@media screen and (min-width: 150em) {
  .h-auto-vl { height: auto; }
  .new-banner { width: 40em; }
}
// End Tachyons

.tb-row,
.tb-col {
  display: inline;

  h3 {
    text-align: center;
  }

  h4 {
    text-align: center;
  }
}

//scss-lint:disable NestingDepth
.tb-alt {
  display: table;
  text-align: center;

  td {
    &:last-child {
      border-top-style: hidden;
    }

    p {
      text-align: center;
    }
  }

  tr {
    &:first-child {
      td {
        &:first-child {
          border-top-style: hidden;
        }
      }
    }

    &:last-child {
      td {
        &:last-child {
          border-bottom-style: hidden;
        }
      }
    }
  }

  img {
    max-width: 250px;
  }
}
//scss-lint:enable NestingDepth

.tb-fluid {
  th {
    background-color: $darkblue;
    color: $white;
  }

  tr {
    &:nth-child(even) {
      background-color: $lightgray;
    }

    &:nth-child(odd) {
      background-color: $lightergray;
    }
  }

  td {
    background-color: unset;
    border-color: $white;
  }
}

//scss-lint:disable ImportantRule
.at-expanding-share-button[data-position=bottom-right] {
  bottom: 90px !important;
  right: 26px !important;
}
//scss-lint:enable ImportantRule

*,
*::before,
*::after {
  box-sizing: border-box;
}

@media (min-width: 675px) {
  //scss-lint:disable NestingDepth
  .tb-alt {
    text-align: left;

    h2 {
      margin-bottom: 25px;
    }

    td {
      height: 320px;

      &:last-child {
        border-top-style: solid;
      }

      p {
        text-align: left;
      }
    }

    tr {
      &:first-child {
        td {
          border-top-style: hidden;
        }
      }

      &:last-child {
        td {
          border-bottom-style: hidden;
        }
      }
    }
  }
//scss-lint:enable NestingDepth
}

@media print {
  .menubar,
  .comments,
  .ent2,
  .footer,
  hr,
  .tblnext,
  .tdresponsive {
    display: none;
  }

  .tdborder {
    display: table-cell;
  }
}

// Defends custom styles
.defends-category {

  &::after {
    color: $fluid-black;
    content: '\02795';
    font-size: 25px;
    margin: 17px 20px 0;
    text-align: right;
    width: 100%;
  }

  &:hover {
    &::after {
      color: $fluid-black;
    }
  }

  &.active {
    &::after {
      content: '\2796';
    }
  }
}

.defendspanel {
  max-height: 0;
  transition: max-height .2s ease-out;
}

// Menu custom styles
@mixin menu-bars {
  content: '';
  left: 30px;
  position: absolute;
  width: 25px;
}

@mixin menu-cross {
  background: $white;
  top: 35px;
  width: 25px;
}

@mixin submenu-plus {
  background: $white;
  content: '';
  position: absolute;
}

.search-box {
  transform: translateY(-80px);
  transition: transform ease 500ms;
  widows: 240px;
}

.search {
  &:focus-within {
    .search-box {
      transform: translateY(0);
    }
  }
}

.menu-button {
  &::before {
    @include menu-bars;
    background: $white;
    height: 2px;
    top: 28px;
  }

  &::after {
    @include menu-bars;
    border-bottom: 2px solid $white;
    border-top: 2px solid $white;
    height: 9px;
    top: 35px;
  }

  &.menu-opened {
    border-bottom: 0;

    &::before {
      @include menu-cross;
      transform: rotate(-45deg);
    }

    &::after {
      @include menu-cross;
      border: 0;
      height: 2px;
      transform: rotate(45deg);
    }
  }
}

.m-closed,
.sm-closed {
  display: none;
}

.m-opened {
  display: block;
  margin: 0;
  max-height: 75vh;
  overflow-y: auto;

  li {
    border-bottom: 1px solid $fluid-gray;
    display: block;
    margin: 0 30px;
    position: relative;

    &:last-child {
      border-bottom: 0;
    }
  }
}

.active-block {
  img {
    display: none;
  }
}

.submenu-button {

  &.submenu-opened {

    &::before {
      display: none;
    }

    &::after {
      background: $white;
    }
  }

  &::before {
    @include submenu-plus;
    height: 20px;
    right: 22px;
    top: 20px;
    width: 3px;
  }

  &::after {
    @include submenu-plus;
    height: 3px;
    right: 13px;
    top: 28px;
    width: 20px;
  }
}

.sm-opened {
  display: block;
  position: relative;

  li {
    height: 61px;
    margin: 0;

    &:first-child {
      border-top: 1px solid $fluid-gray;
    }
  }
}

@media (min-width: 960px) {

  .m-opened {
    height: 72px;
    max-height: unset;
    overflow-y: unset;

    li {
      border-bottom: 0;
      display: inline-block;
      margin: 0;
      min-height: 72px;
      padding-top: 7px;
      width: auto;

      &:hover {
        background-color: $fluid-red;
      }
    }
  }

  .has-sub {

    &:hover {
      ul {
        background: $fluid-black;
        display: block;
        margin-top: 4px;
      }

      &::before {
        display: none;
      }
    }
  }

  .active-block {
    img {
      display: block;
      float: right;
      margin: -44px 3px 0 0;
      width: 10px;
    }
  }

  .sm-opened {
    display: none;
    position: absolute;

    li {
      min-height: 60px;
      min-width: 260px;
      padding-top: 0;

      &:first-child {
        border-top: 0;
      }
    }
  }
}

// New menu component

.lower~.overlay-hugeinc {
  opacity: 0;
  transition: opacity .5s, visibility 0s .5s;
  visibility: hidden;
}

//scss-lint:disable IdSelector
#op:checked~.overlay-hugeinc {
  opacity: 1;
  transition: opacity .5s;
  visibility: visible;
}

//scss-lint:disable IdSelector MergeableSelector
#op:checked~.overlay-hugeinc nav ul {
  opacity: 1;
  transform: rotateX(0deg);
}

//scss-lint:disable IdSelector MergeableSelector
#op:not(:checked)~.overlay-hugeinc nav ul {
  transform: translateY(25%) rotateX(-35deg);
}

